force-app/main/default/objects/HowTo__kav/fields/Ext_Link__c.field-meta.xml
<CustomField>
    <fullName>Ext_Link__c</fullName>
    <label>Ext Link</label>
    <type>Url</type>
</CustomField>