force-app/main/default/objects/HowTo__kav/fields/More_Info__c.field-meta.xml
<CustomField>
    <fullName>More_Info__c</fullName>
    <label>More Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>